--- a/THESIS/04-results.Rmd
+++ b/THESIS/04-results.Rmd
@@ -36,13 +36,13 @@ We tried to solve the proposed environment using model-free, value-function appr
 
 Deep Q Networks (DQN) [@mnih2013playing][@mnih2015human] meets the previously stated conditions and is well suited for tasks with a discrete set of actions and when sampling from the environment is low-cost. We implemented DQN with $n$-step unrolling of the Bellman optimality equation for $Q$ values [@sutton1988learning]. The implementation was made in Python 3.x, the _lingua franca_ of AI and RL. The non-linear $Q$ function approximator was an Artificial Neural Network (ANN). We implemented the _experience replay_ memory as a _double-ended queue_ (deque) data structure, which behaves as a list but allows for efficient "appends" and "pops" from either side ($\mathcal{O}(1)$). (see *https://docs.python.org/3.8/library/collections.html?highlight=collections#collections.deque*). Thus for a fixed size of an _experience replay_, incoming observations are appended to one end and old observations are "popped" from the other.
 
-A high level explanation of our DQN implementation is as follows: The logic of the $e$-greedy policy was abstracted into an "Agent class" which also holds a memory of past observations (_experience replay_), during the training loop the agent performs an action and advances the environment one step, saving the transition tuple $(s,a,r,s')$ into its own memory. Then the agent samples a batch of transitions from the memory buffer and feeds it to the ANN model. A forward prediction of $Q$ values for all $9$ actions is computed followed by a backward optimization step. These sequence of agent acts and ANN train steps is iterated during $T$ steps. Each $C$ training steps the weights of the policy and target networks are syncronized.
+A high level explanation of our DQN implementation [(see Apendix 1)](#deep-q-networks-dqn-using-open-ai-gym-api) is as follows: The logic of the $e$-greedy policy was abstracted into an "Agent class" which also holds a memory of past observations (_experience replay_), during the training loop the agent performs an action and advances the environment one step, saving the transition tuple $(s,a,r,s')$ into its own memory. Then the agent samples a minibatch of transitions from the memory buffer and feeds it to the ANN model. A forward prediction of $Q$ values for all $9$ actions is computed followed by a backward optimization step. These sequence of agent acts and ANN train steps is iterated during $T$ steps. Each $C$ training steps the weights of the policy and target networks are syncronized.
 
 For the full code details refer to: *https://github.com/elbecerrasoto/CARL*
 
 ### Preprocessing
 
-The FFEM tool generates environments that follow the guidelines of the _Open AI Gym API_ (OAGA) [@1606.01540]. The API specifies that the observation should be a numerical vector, that is commonly returned as a _numpy_ $n$-dimensional array [@walt2011numpy]. In our implementation we instead returned a tuple of three _numpy arrays_ representing: the grid data (cell states), the position of the helicopter and the remaining moves ($m$) to CA updating. We made the knowledge of $m$ available to the agent to guarantee the Markov property. A more difficult RL task can be made by not knowing $m$ (just dropping its value from the tuple), thus shifting the system to a _Partially Observable Markov Decision Process_ (POMDP), where the hidden state $m$ should be infered by the agent. Strictly speaking our implementation is departing from the _Open AI Gym API_ observation specification, however it does it in favor of facilitating the data processing and if purity is insisted on, merely concatenating the data and reshaping it into a _numpy array_ would fix it.
+The FFEM tool generates environments that follow the guidelines of the _Open AI Gym API_ (OAGA) [@1606.01540]. The API specifies that the observation should be a numerical vector, that is commonly returned as a _numpy_ $n$-dimensional array [@walt2011numpy]. In our implementation we instead returned a tuple of three _numpy arrays_ representing: the grid data (cell states), the position of the helicopter and the remaining moves ($m$) to CA updating. We made the knowledge of $m$ available to the agent to guarantee the Markov property. A more difficult RL task can be made by not knowing $m$ (just dropping its value from the tuple), thus shifting the system to a _Partially Observable Markov Decision Process_ (POMDP), where the hidden state $m$ should be infered by the agent. Strictly speaking our implementation is departing from the _Open AI Gym API_ observation specification, however it does it in favor of facilitating the data processing and if purity is insisted on, merely concatenating the data and reshaping it into a single _numpy array_ would fix it.
 
 The input to the ANN models was a one-hot encoding of the CA grid concatenated with the "helicopter" position and the $m$ remaining moves parameter. This was supported by a FFEM feature to indicate the output format of the CA lattice, that can be returned in plain numeric representation, one-hot encoding or by channels as the CA lattice can be interpreted as an image.
 
@@ -78,7 +78,15 @@ knitr::include_graphics('pics/A3.png')
 
 ### Training Details
 
-A $Q_{network}$ capable of predicting the values of the actions would solve the Reinforcement Learning problem (the agent would act greedily over the $Q$-values). Unluckily training a $Q_{network}$ could be tricky as theoretical convergence results are only available for linear approximators [@tsitsiklis1997analysis]. Aditionally _Supervised Learning_ techniques assume that the data was generated from the same distribution and its instances are _i.i.d_, both assumptions are violated because the training distribution is constantly changing as the implicit policy defined by the network is changing and the generated observations are highly correlated. 
+A $Q_{network}$ capable of predicting the values of the actions would solve the Reinforcement Learning problem (the agent would act greedily over the $Q$-values). Unluckily training a $Q_{network}$ could be tricky as theoretical convergence results are only available for linear approximators [@tsitsiklis1997analysis]. Aditionally _Supervised Learning_ techniques assume that the data was generated from the same distribution and its instances are _i.i.d_, both assumptions are violated because the training distribution is constantly changing as the implicit policy defined by the network is changing and the generated observations are highly correlated. To combat the inestability that arises DQN uses a replay memory and a target network.
+
+Nine experiments were run using the described environment, between experiments some hyperparametes were allowed to vary, namely the type of initial exploration, the unrolling of the Bellman's update, the network architecture, learning rate, batch size, and $\gamma$ disscount parameter.
+
+Each experiment was run on _[Google Colaboratory](https://colab.research.google.com)_ cloud service using their provided GPUs and computing resources. Their run for 1,200,000 epochs each, divided in 400,000 exploration and 800,000 of exploting epochs. Two exploration schemes were used, for some models a linear annealing  of $\epsilon$ from $1.0$ to $0.10$ and for others a simple heruristic that moves the helicopter to any fire cell on the neighborhood, choosing randomly when more than one fire cell was present.
+
+The employed optimization algorithm was Adam [@kingma2014adam] with default _[Pytorch](https://pytorch.org/docs/stable/optim.html)_ values, with the exeption of _learning rate_ that was set manually per experiment (see ). Each transition tuple in the _experience replay_ only estimates a single $Q(s,a)$ value, however the output of the $Q_{network}$ is a vector of $Q$ values for all actions so during optimization steps only the weights involved in the calculation of a single $Q(s,a)$ value must be updated. 
+
+
 
 ### Evaluation Procedure
 
