--- a/THESIS/references.bib
+++ b/THESIS/references.bib
@@ -439,3 +439,10 @@ url = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-perf
   pages={1075--1081},
   year={1997}
 }
+
+@article{kingma2014adam,
+  title={Adam: A method for stochastic optimization},
+  author={Kingma, Diederik P and Ba, Jimmy},
+  journal={arXiv preprint arXiv:1412.6980},
+  year={2014}
+}
